--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="grid" lang="is">
+<html lang="is">
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,10 +9,22 @@
     <title>Myndbandaleiga</title>
   </head>
   <body>
-    <section>
-      <div class="row">
-    
+    <header>
+      <h1>Myndabandaleigan</h1>
+    </header>
+    <main>
+      <div class="container">
+         <div class="nyleg">
 
+         </div>
+         <div class="kennslu">
+
+         </div>
+         <div class="skemmti">
+
+         </div>
+        </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
