further js update

--- a/videos.html
+++ b/videos.html
@@ -10,10 +10,15 @@
   </head>
   <body>
     <header>
-      <h1>Myndabandaleigan</h1>
+
     </header>
     <main>
+      <div class="container">
+
+      </div>
     </main>
-    <script src="script.js"></script>
+    <footer>
+    </footer>
+    <script src="videoscript.js"></script>
   </body>
 </html>
