--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Myndabandaleigan</h1>
     </header>
     <main>
-      <div class="container">
+      <div class="row container">
 
         </div>
     </main>
